--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@ VOLUME /tmp
 EXPOSE 8080
 
 # указываем, где в нашем приложении лежит джарник
-ARG JAR_FILE=target/demo-0.0.1-SNAPSHOT.jar
+ARG JAR_FILE=target/demo-0.0.2.jar
 
 # добавляем джарник в образ под именем backend.jar
 ADD ${JAR_FILE} backend.jar
