--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>ru.example</groupId>
   <artifactId>demo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2</version>
   <packaging>jar</packaging>
 
   <name>Backend</name>
