--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,5 +17,5 @@ COPY ./ ./
 # устанавливаем все пакеты, необходимые для запуска приложения.
 RUN npm install
 
-# запускаем приложение командой npm start.
+# запускаем приложение командой ~ npm start.
 CMD ["npm", "start"]
